--- a/ros2_cppserial/CMakeLists.txt
+++ b/ros2_cppserial/CMakeLists.txt
@@ -33,6 +33,18 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+# install launch files
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# install config files
+install(DIRECTORY
+  config
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
