--- a/ros2_pyserial/setup.cfg
+++ b/ros2_pyserial/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/ros2_pyserial
+script_dir=$base/lib/ros2_pyserial
 [install]
-install-scripts=$base/lib/ros2_pyserial
+install_scripts=$base/lib/ros2_pyserial
