--- a/ros2_pyserial/package.xml
+++ b/ros2_pyserial/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ros2_pyserial</name>
-  <version>0.0.0</version>
-  <description>Software interface for serial devices</description>
+  <version>0.0.1</version>
+  <description>Python interface for serial devices</description>
   <maintainer email="roza.gkliva@ttu.ee">Roza Gkliva</maintainer>
-  <license>Apache 2.0</license>
+  <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
