Add second hydromast sensor
- set serial ports, publisher topics, and id numbers for hydromasts
- use hardware id to identify gps

--- a/ros2_cppserial/config/gps.yaml
+++ b/ros2_cppserial/config/gps.yaml
@@ -1,6 +1,7 @@
 gps_interface:
   ros__parameters:
     serial_params:
+      use_port: False
       port: "/dev/ttyUSB0"
       baud: 460800
       device_hwid: "0403:6015"
