--- a/ros2_cppserial/config/hydromast_n26.yaml
+++ b/ros2_cppserial/config/hydromast_n26.yaml
@@ -2,14 +2,14 @@ hydromast_interface:
   ros__parameters:
     serial_params:
       use_port: True       # if use_port is False, device_hwid will be used to scan all ports
-      port: "/dev/ttyUSB0"  # if port is set it will be used instead of device_hwid
+      port: "/dev/ttyS2"   # if port is fixed it should be used instead of device_hwid
       baud: 115200
       device_hwid: "0403:6001"
     incoming_message:
-      header: "N03"
+      header: "N26"
       footer: "/r/n"
       packet_size: 0
       rate_hz: 50
     publish_topic:
-      name: "hydromast_data"
-      frame_id: "n03"
+      name: "hydromast_n26_data"
+      frame_id: "n26"
