--- a/ros2_cppserial/config/ina219.yaml
+++ b/ros2_cppserial/config/ina219.yaml
@@ -1,20 +1,20 @@
-ati_ft_interface:
+ina219_interface:
   ros__parameters:
     serial_params:
       use_port: True       # if use_port is False, device_hwid will be used to scan all ports
       port: "/dev/ttyUSB0"   # if port is fixed it should be used instead of device_hwid
       baud: 115200
-      device_hwid: "0403:6001"
+      device_hwid: ""
     incoming_message:
       header: ""
       footer: ""
       packet_size: 0
-      rate_hz: 500
+      rate_hz: 250
     outgoing_message:
       is_single: False 
-      is_continuous: True
+      is_continuous: False
       message: "r"        # "s" for continuous reading, "r" for single reading 
       rate_hz: 100  # 100 Hz
     publish_topic:
-      name: "ati_ft_data"
-      frame_id: "ati_ft_sensor"
+      name: "ina219_data"
+      frame_id: "ina219_sensor"
